[package]
name = "forward-renderer"
version = "0.1.0"
edition = "2024"


[dependencies]
wgpu_renderer = { path = "../wgpu_renderer" }

# dependencies of wgpu 
cfg-if = "1"
env_logger = "0.11"
winit = "0.30"
pollster = "0.4"
wgpu = "28.0"
instant = "0.1"
cgmath = "0.18"

# other  
log = "0.4"
bytemuck = { version = "1.12", features = [ "derive" ] }
rusttype = "0.9"
fastrand = "2.0"
gltf = "1.4.1"
noise = "0.9.0"
colorous = "1.0.16"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
log = "0.4"
console_log = "1.0.0"
wgpu = { version = "28.0", features = [ "webgl" ]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
