[package]
name = "neon-warlord"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/FirePrincess01/neon-warlord"
description = "Numbers goes up auto battler slob"
# license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "app"
test = false
doc = false 

[dependencies]
forward-renderer = { path = "../forward-renderer" }
wgpu_renderer = { path = "../wgpu_renderer" }

# dependencies of wgpu 
cfg-if = "1"
winit = "0.30"
wgpu = "28.0"
instant = "0.1"
cgmath = "0.18"

# other  
log = "0.4"
bytemuck = { version = "1.12", features = [ "derive" ] }
rusttype = "0.9"
fastrand = "2.0"
gltf = "1.4.1"
noise = "0.9.0"
colorous = "1.0.16"
# wasm_thread = "0.3.3"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
